--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= title[lang] %></title>
     <meta name="description" content="<%= description[lang] %>">
+    <link rel="alternate" href="<%= url %>/en/guides" hreflang="en-US" />
+    <link rel="alternate" href="<%= url %>/ru/guides" hreflang="ru" />
     <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
