--- a/views/article.ejs
+++ b/views/article.ejs
@@ -8,6 +8,8 @@
     <title><%= article.title[lang] %></title>
     <meta name="description" content="<%= article.description[lang] %>">
     <%- article.metaTags[lang] %>
+    <link rel="alternate" href="<%= url %>/en/guides/<%= article.slug %>" hreflang="en-US" />
+    <link rel="alternate" href="<%= url %>/ru/guides/<%= article.slug %>" hreflang="ru" />
     <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
