--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<%= url %>/public/static/css/reset.css">
     <link rel="stylesheet" href="<%= url %>/public/static/css/index.css">
 </head>
@@ -54,9 +54,6 @@
 </div>
 <div id="url" style="display: none;" data=<%= url %>></div>
 <div id="lang" style="display: none;" data=<%= lang %>></div>
-<!-- Local copy -->
-<script src="<%= url %>/public/static/js/popper.min.js"></script>
-<script src="<%= url %>/public/static/js/tippy-bundle.umd.js"></script>
 
 <!-- Development -->
 <!--<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>-->
