--- a/views/article.ejs
+++ b/views/article.ejs
@@ -13,82 +13,98 @@
     <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<%= url %>/public/static/css/reset.css">
     <link rel="stylesheet" href="<%= url %>/public/static/css/index.css">
 </head>
 <body>
-<div class="container">
-    <div class="header-container">
-        <div class="header">
-            <div class="logo-container">
-                <a class="logo" href="<%= url %>/<%= lang %>/guides">
-                    <img src="<%= url %>/public/static/images/lolguides-logo3.png" alt="logo">
-                </a>
+    <div class="container">
+        <div class="header-container">
+            <div class="header">
+                <div class="logo-container">
+                    <a class="logo" href="<%= url %>/<%= lang %>/guides">
+                        <img src="<%= url %>/public/static/images/lolguides-logo3.png" alt="logo">
+                    </a>
+                </div>
+                <div class="search-container">
+                    <div class="search-input-wrapper"> 
+                        <input class="search-input" type="text" placeholder="<%= i18n.header.search[lang] %>">
+                        <input class="search-input-mobile" type="text" placeholder="<%= i18n.header.searchMobile[lang] %>">
+                    </div>
+                </div>
             </div>
-            <div class="search-container">
-                <div class="search-input-wrapper"> 
-                    <input class="search-input" type="text" placeholder="<%= i18n.header.search[lang] %>">
-                    <input class="search-input-mobile" type="text" placeholder="<%= i18n.header.searchMobile[lang] %>">
+        </div>
+        <div class="content-wrapper">
+            <div class="content">
+                <div class="content-header" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(<%= url %>/<%= article.imageUrl %>)">
+                    <div class="content-header-title">
+                        <h1><%= article.headerTitle[lang] %></h1>
+                        <h2><%= article.headerSubtitle[lang] %></h2>
+                    </div>
+                </div>
+                <% for(const [index, section] of article.sections.entries()) {%>
+                    <div class="section" id="section-<%= index + 1 %>">
+                        <h2 class="section-title">
+                            <%= section.title[lang] %>
+                        </h2>
+                        <% for(const block of section.blocks) {%>
+                            <%- block %>
+                        <% } %>
+                    </div>
+                <% } %>
+            </div>
+            <div class="sidebar">
+                <div class="sidebar-navigation">
+                    <h3><%= article.headerTitle[lang] %></h3>
+                    <div class="divider"></div>
+                    <div class="nav-items-wrapper">
+                        <% for(const [index, section] of article.sections.entries()) {%>
+                            <div class="nav-item">
+                                <a href="#section-<%= index + 1 %>">
+                                    <div class="link">
+                                        <div><%= index + 1%>)</div> <div class="underlined"><%= section.title[lang] %></div>
+                                    </div>
+                                </a>
+                            </div>
+                        <% } %>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="content-wrapper">
-        <div class="content">
-            <div class="content-header" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(<%= url %>/<%= article.imageUrl %>)">
-                <div class="content-header-title">
-                    <h1><%= article.headerTitle[lang] %></h1>
-                    <h2><%= article.headerSubtitle[lang] %></h2>
-                </div>
-            </div>
-            <% for(const [index, section] of article.sections.entries()) {%>
-                <div class="section" id="section-<%= index + 1 %>">
-                    <h2 class="section-title">
-                        <%= section.title[lang] %>
-                    </h2>
-                    <% for(const block of section.blocks) {%>
-                        <%- block %>
-                    <% } %>
-                </div>
-            <% } %>
-        </div>
-        <div class="sidebar">
-            <div class="sidebar-navigation">
-                <h3><%= article.headerTitle[lang] %></h3>
-                <div class="divider"></div>
-                <div class="nav-items-wrapper">
-                    <% for(const [index, section] of article.sections.entries()) {%>
-                        <div class="nav-item">
-                            <a href="#section-<%= index + 1 %>">
-                                <div class="link">
-                                    <div><%= index + 1%>)</div> <div class="underlined"><%= section.title[lang] %></div>
-                                </div>
-                            </a>
-                        </div>
-                    <% } %>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="url" style="display: none;" data=<%= url %>></div>
-<div id="lang" style="display: none;" data=<%= lang %>></div>
-<!-- Local copy -->
-<script src="<%= url %>/public/static/js/popper.min.js"></script>
-<script src="<%= url %>/public/static/js/tippy-bundle.umd.js"></script>
+    <div id="url" style="display: none;" data=<%= url %>></div>
+    <div id="lang" style="display: none;" data=<%= lang %>></div>
+    <noscript id="deferred-styles">
+        <link rel="stylesheet" type="text/css" href="<%= url %>/public/static/css/tooltip.css"/>
+    </noscript>
+    <script>
+        var loadDeferredStyles = function() {
+            var addStylesNode = document.getElementById("deferred-styles");
+            var replacement = document.createElement("div");
+            replacement.innerHTML = addStylesNode.textContent;
+            document.body.appendChild(replacement)
+            addStylesNode.parentElement.removeChild(addStylesNode);
+        };
+        var raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
+            window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+        if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+        else window.addEventListener('load', loadDeferredStyles);
+    </script>
+    <!-- Local copy -->
+    <!-- <script src="<%= url %>/public/static/js/popper.min.js"></script> -->
+    <!-- <script src="<%= url %>/public/static/js/tippy-bundle.umd.js"></script> -->
 
-<!-- Development -->
-<!--<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>-->
-<!--<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>-->
+    <!-- Development -->
+    <!--<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>-->
+    <!--<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>-->
 
-<!-- Production -->
-<!-- <script src="https://unpkg.com/@popperjs/core@2"></script>-->
-<!-- <script src="https://unpkg.com/tippy.js@6"></script>-->
-<script src="<%= url %>/public/static/js/script.js"></script>
+    <!-- Production -->
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="<%= url %>/public/static/js/script.js"></script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FQFTHLLC6J"></script>
-<script async src="<%= url %>/public/static/js/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FQFTHLLC6J"></script>
+    <script async src="<%= url %>/public/static/js/gtag.js"></script>
 </body>
 </html>
