--- a/views/article.ejs
+++ b/views/article.ejs
@@ -10,7 +10,7 @@
     <%- article.metaTags[lang] %>
     <link rel="alternate" href="<%= url %>/en/guides/<%= article.slug %>" hreflang="en-US" />
     <link rel="alternate" href="<%= url %>/ru/guides/<%= article.slug %>" hreflang="ru" />
-    <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
