--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -9,7 +9,7 @@
     <meta name="description" content="<%= description[lang] %>">
     <link rel="alternate" href="<%= url %>/en/guides" hreflang="en-US" />
     <link rel="alternate" href="<%= url %>/ru/guides" hreflang="ru" />
-    <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
