--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= title[lang] %></title>
+    <title><%= metaTitle[lang] %></title>
     <meta name="description" content="<%= description[lang] %>">
     <link rel="alternate" href="<%= url %>/en/guides" hreflang="en-US" />
     <link rel="alternate" href="<%= url %>/ru/guides" hreflang="ru" />
