--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -433,12 +433,15 @@ html,body {
 
 .runes-block {
     display: flex;
+    width: 100%;
     gap: 32px;
 }
 
 .runes-block .runes-tree {
     display: flex;
     flex-direction: column;
+    flex: 1 1;
+    max-width: 240px;
 }
 
 .runes-tree .rune-header {
@@ -448,7 +451,6 @@ html,body {
     padding: 10px;
     border-radius: 5px;
     gap: 10px;
-    width: 240px;
 }
 
 .secondary-tree .rune-header {
@@ -595,6 +597,29 @@ html,body {
     margin-bottom: 0;
 }
 
+@media screen and (max-width: 550px) {
+    .items-block {
+        margin: 4px 0px 4px;
+    }
+
+    .items-block .items-container {
+        gap: 12px 20px;
+        padding: 12px 12px 8px;
+    }
+
+    .items-title ~ .items-container{
+        padding: 10px 14px;
+    }
+
+    .items-block .item {
+        width: 50px;
+    }
+    
+    .items-block img {
+        height: 50px;
+    }
+}
+
 /* SKILL ORDER BLOCK */
 
 .skill-order-block {
@@ -679,6 +704,7 @@ html,body {
 
 .pros-cons-block{
     display: flex;
+    width: 100%;
     gap: 18px 60px;
     font-size: 16px;
 }
@@ -691,10 +717,12 @@ html,body {
 }
 
 .pros-cons-block .item {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
+    flex-grow: 1;
     background: #323232;
     padding: 18px;
-    border-radius: 5px;
+    border-radius: 5px;   
 }
 
 .pros-block {
@@ -786,7 +814,7 @@ html,body {
         gap: 20px;
     }
 
-    .runes-tree {
+    .runes-block .runes-tree {
         width: 100%;
     }
 
@@ -794,16 +822,16 @@ html,body {
         width: 100%;
     }
 
-    .runes-tree .rune-header {
-        /*width: 200px;*/
+    .runes-block .runes-tree {
+        max-width: 200px;
     }
 
     .runes-row {
-        padding: 12px 16px;
+        padding: 12px 20px;
     }
 
     .keystone-row {
-        padding: 12px 0;
+        padding: 14px 0 12px;
     }
 
     .secondary-tree .runes-row:nth-child(4) {
@@ -811,7 +839,7 @@ html,body {
     }
 
     .secondary-tree .runes-row {
-        padding: 6px 18px;
+        padding: 6px 20px;
     }
 
     .secondary-tree .stat-shards-row {
@@ -876,8 +904,10 @@ html,body {
 
     .content-header-title h2 {
         font-size: 17px;
-    }
+    }    
+}
 
+@media screen and (max-width: 400px) {
     .runes-block {
         gap: 16px;
     }
@@ -891,30 +921,68 @@ html,body {
     }
 
     .rune-header img {
-        height: 26px;
-        width: 26px;
+        height: 24px;
+        width: 24px;
     }
 
     .rune-header span {
         font-size: 14px;
     }
 
+    .runes-row {
+        padding: 12px 12px;
+    }
+
+    .runes-row .rune-item img {
+        width: 24px;
+        height: 24px;
+    }
+
     .keystone-row {
         margin-bottom: 0;
+        padding: 14px 0 12px;
     }
 
     .keystone-row .rune-item img {
-        width: 38px;
-        height: 38px;
+        width: 34px;
+        height: 34px;
     }
 
     .secondary-tree .runes-row .rune-item img {
-        width: 24px;
-        height: 24px;
+        width: 22px;
+        height: 22px;
     }
     .secondary-tree .stat-shards-row .rune-item img {
         width: 16px;
         height: 16px;
+    }
+    
+}
+
+@media screen and (max-width: 450px) {
+    .content-header-title h1 {
+        font-size: 28px;
+    }
+
+    .content-header-title h2 {
+        font-size: 17px;
+    }    
+}
+
+@media screen and (max-width: 350px) {
+
+    .keystone-row .rune-item img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .secondary-tree .runes-row .rune-item img {
+        width: 20px;
+        height: 20px;
+    }
+    .secondary-tree .stat-shards-row .rune-item img {
+        width: 14px;
+        height: 14px;
     }
 }
 
