--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= metaTitle[lang] %></title>
     <meta name="description" content="<%= description[lang] %>">
+    <link rel="canonical" href="<%= url %>/<%= lang %>/guides" />
     <link rel="alternate" href="<%= url %>/en/guides" hreflang="en" />
     <link rel="alternate" href="<%= url %>/ru/guides" hreflang="ru" />
     <link rel="shortcut icon" type="image/x-icon" href="<%= url %>/public/static/images/favicon.ico" />
