--- a/views/article.ejs
+++ b/views/article.ejs
@@ -86,17 +86,17 @@
                     <option value="ru" <%= lang == 'ru' ? "selected" : "" %> >Русский</option>
                 </select>
                 <div class="socials">
-                    <a href="https://twitter.com/LoLGuides" class="social-item">                            
-                        <img src="<%= url %>/public/static/images/twitter.svg">              
+                    <a href="https://twitter.com/LoLGuides" class="social-item" target="_blank" rel="noopener">                            
+                        <img src="<%= url %>/public/static/images/twitter.svg" alt="twitter">              
                     </a>
-                    <a href="#" class="social-item">                            
-                        <img src="<%= url %>/public/static/images/facebook.svg">              
+                    <a href="#" class="social-item" target="_blank" rel="noopener">                            
+                        <img src="<%= url %>/public/static/images/facebook.svg" alt="facebook">              
                     </a>
-                    <a href="mailto:lolguides.business@gmail.com" class="social-item">                            
-                        <img src="<%= url %>/public/static/images/mail.svg">              
+                    <a href="mailto:lolguides.business@gmail.com" class="social-item" target="_blank" rel="noopener">                            
+                        <img src="<%= url %>/public/static/images/mail.svg" alt="mail">              
                     </a>
-                    <a href="https://www.youtube.com/@lolguides_space" class="social-item">                            
-                        <img src="<%= url %>/public/static/images/youtube.svg">              
+                    <a href="https://www.youtube.com/@lolguides_space" class="social-item" target="_blank" rel="noopener">                             
+                        <img src="<%= url %>/public/static/images/youtube.svg" alt="youtube">              
                     </a>
                 </div>
             </div>
