--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -72,7 +72,7 @@
                 <a href="#" class="social-item" target="_blank" rel="noopener">                            
                     <img src="<%= url %>/public/static/images/facebook.svg" alt="facebook">              
                 </a>
-                <a href="mailto:lolguides.business@gmail.com" class="social-item" target="_blank" rel="noopener">                            
+                <a href="mailto:lolguides.business@gmail.com" class="social-item">                            
                     <img src="<%= url %>/public/static/images/mail.svg" alt="mail">              
                 </a>
                 <a href="https://www.youtube.com/@lolguides_space" class="social-item" target="_blank" rel="noopener">                             
