--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -18,108 +18,108 @@
     <link rel="stylesheet" href="<%= url %>/public/static/css/index.css">
 </head>
 <body>
-<div class="container main-page">
-    <div class="header-container">
-        <div class="header">
-            <div class="logo-container">
-                <a class="logo" href="<%= url %>/<%= lang == 'en' ? '' : lang %>">
-                    <img src="<%= url %>/public/static/images/lolguides-logo3.png" alt="logo">
-                </a>
+    <div class="container main-page">
+        <header class="header-container">
+            <div class="header">
+                <div class="logo-container">
+                    <a class="logo" href="<%= url %>/<%= lang == 'en' ? '' : lang %>">
+                        <img src="<%= url %>/public/static/images/lolguides-logo3.png" alt="logo">
+                    </a>
+                </div>
+                <div class="search-container">
+                    <div class="search-input-wrapper"> 
+                        <input class="search-input" type="text" placeholder="<%= i18n.header.search[lang] %>">
+                        <input class="search-input-mobile" type="text" placeholder="<%= i18n.header.searchMobile[lang] %>">
+                    </div>
+                </div>
             </div>
-            <div class="search-container">
-                <div class="search-input-wrapper"> 
-                    <input class="search-input" type="text" placeholder="<%= i18n.header.search[lang] %>">
-                    <input class="search-input-mobile" type="text" placeholder="<%= i18n.header.searchMobile[lang] %>">
+        </header>
+        <div class="content-wrapper">
+            <div class="content">
+                <h1 class="page-title"><%= i18n.mainPage.title[lang] %></h1>
+                <div class="section first-section">
+                    <div class="section-block section-block-text"><%= i18n.mainPage.blockText[lang] %></div>
+                </div>
+                <div class="section">
+                    <h2 class="section-title">
+                        <%= title[lang] %>
+                    </h2>
+                    <div class="articles-container">
+                        <% for(const article of articles) {%>
+                            <a href="<%= url %>/<%= lang %>/<%= article.slug %>" class="article-item">
+                                <div class="article-bg" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(<%= url %>/<%= article.imageUrl.replace(/\\/g, "/") %>)">
+                                </div>
+                                <div class="article-title">
+                                    <h2><%= article.headerTitle[lang] %></h2>
+                                </div>
+                            </a>      
+                        <% } %>
+                    </div>             
+                </div>
+                <div class="section">
+                    <div class="banner" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(<%= url %>/public/static/images/lol-art.webp)">
+                        <div class="banner-left">
+                            <h2 class="banner-title">
+                                <%= i18n.mainPage.bannerTitle[lang] %>
+                            </h2>
+                            <span class="banner-text">
+                                <%= i18n.mainPage.bannerText[lang] %>                
+                            </span>
+                        </div>
+                        <div class="banner-right">
+                            <button class="banner-button">
+                                <%= i18n.mainPage.bannerButton[lang] %>
+                            </button>
+                        </div>
+                    </div>
+                            
                 </div>
             </div>
         </div>
     </div>
-    <div class="content-wrapper">
-        <div class="content">
-            <h1 class="page-title"><%= i18n.mainPage.title[lang] %></h1>
-            <div class="section first-section">
-                <div class="section-block section-block-text"><%= i18n.mainPage.blockText[lang] %></div>
+    <footer class="footer-container">
+        <div class="footer">
+            <div class="footer-left">
+                <span class="copyright">
+                    Copyright 2023 © LoLGuides
+                </span>
             </div>
-            <div class="section">
-                <h2 class="section-title">
-                    <%= title[lang] %>
-                </h2>
-                <div class="articles-container">
-                    <% for(const article of articles) {%>
-                        <a href="<%= url %>/<%= lang %>/<%= article.slug %>" class="article-item">
-                            <div class="article-bg" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(<%= url %>/<%= article.imageUrl.replace(/\\/g, "/") %>)">
-                            </div>
-                            <div class="article-title">
-                                <h2><%= article.headerTitle[lang] %></h2>
-                            </div>
-                        </a>      
-                    <% } %>
-                </div>             
-            </div>
-            <div class="section">
-                <div class="banner" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(<%= url %>/public/static/images/lol-art.webp)">
-                    <div class="banner-left">
-                        <h2 class="banner-title">
-                            <%= i18n.mainPage.bannerTitle[lang] %>
-                        </h2>
-                        <span class="banner-text">
-                            <%= i18n.mainPage.bannerText[lang] %>                
-                        </span>
-                    </div>
-                    <div class="banner-right">
-                        <button class="banner-button">
-                            <%= i18n.mainPage.bannerButton[lang] %>
-                        </button>
-                    </div>
+            <div class="footer-right">      
+                <select id="lang-select">
+                    <option value="en" <%= lang == 'en' ? "selected" : "" %> >English</option>
+                    <option value="ru" <%= lang == 'ru' ? "selected" : "" %> >Русский</option>
+                </select>
+                <div class="socials">
+                    <a href="https://twitter.com/LoLGuides" class="social-item" target="_blank" rel="noopener">                            
+                        <img src="<%= url %>/public/static/images/twitter.svg" alt="twitter">              
+                    </a>
+                    <a href="#" class="social-item" target="_blank" rel="noopener">                            
+                        <img src="<%= url %>/public/static/images/facebook.svg" alt="facebook">              
+                    </a>
+                    <a href="mailto:lolguides.business@gmail.com" class="social-item">                            
+                        <img src="<%= url %>/public/static/images/mail.svg" alt="mail">              
+                    </a>
+                    <a href="https://www.youtube.com/@lolguides_space" class="social-item" target="_blank" rel="noopener">                             
+                        <img src="<%= url %>/public/static/images/youtube.svg" alt="youtube">              
+                    </a>
                 </div>
-                        
             </div>
         </div>
-    </div>
-</div>
-<div class="footer-container">
-    <div class="footer">
-        <div class="footer-left">
-            <span class="copyright">
-                Copyright 2023 © LoLGuides
-            </span>
-        </div>
-        <div class="footer-right">      
-            <select id="lang-select">
-                <option value="en" <%= lang == 'en' ? "selected" : "" %> >English</option>
-                <option value="ru" <%= lang == 'ru' ? "selected" : "" %> >Русский</option>
-            </select>
-            <div class="socials">
-                <a href="https://twitter.com/LoLGuides" class="social-item" target="_blank" rel="noopener">                            
-                    <img src="<%= url %>/public/static/images/twitter.svg" alt="twitter">              
-                </a>
-                <a href="#" class="social-item" target="_blank" rel="noopener">                            
-                    <img src="<%= url %>/public/static/images/facebook.svg" alt="facebook">              
-                </a>
-                <a href="mailto:lolguides.business@gmail.com" class="social-item">                            
-                    <img src="<%= url %>/public/static/images/mail.svg" alt="mail">              
-                </a>
-                <a href="https://www.youtube.com/@lolguides_space" class="social-item" target="_blank" rel="noopener">                             
-                    <img src="<%= url %>/public/static/images/youtube.svg" alt="youtube">              
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="url" style="display: none;" data=<%= url %>></div>
-<div id="lang" style="display: none;" data=<%= lang %>></div>
+    </footer>
+    <div id="url" style="display: none;" data=<%= url %>></div>
+    <div id="lang" style="display: none;" data=<%= lang %>></div>
 
-<!-- Development -->
-<!--<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>-->
-<!--<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>-->
+    <!-- Development -->
+    <!--<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>-->
+    <!--<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>-->
 
-<!-- Production -->
-<!-- <script src="https://unpkg.com/@popperjs/core@2"></script>-->
-<!-- <script src="https://unpkg.com/tippy.js@6"></script>-->
-<script src="<%= url %>/public/static/js/script.js"></script>
+    <!-- Production -->
+    <!-- <script src="https://unpkg.com/@popperjs/core@2"></script>-->
+    <!-- <script src="https://unpkg.com/tippy.js@6"></script>-->
+    <script src="<%= url %>/public/static/js/script.js"></script>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FQFTHLLC6J"></script>
-<script async src="<%= url %>/public/static/js/gtag.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FQFTHLLC6J"></script>
+    <script async src="<%= url %>/public/static/js/gtag.js"></script>
 </body>
 </html>
