--- a/views/article.ejs
+++ b/views/article.ejs
@@ -23,7 +23,7 @@
             <div class="header">
                 <div class="logo-container">
                     <a class="logo" href="<%= url %>/<%= lang == 'en' ? '' : lang %>">
-                        <img src="<%= url %>/public/static/images/lolguides-logo3.png" alt="logo">
+                        <img src="<%= url %>/public/static/images/lolguides-logo.svg" alt="logo">
                     </a>
                 </div>
                 <div class="search-container">
