--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= metaTitle[lang] %></title>
     <meta name="description" content="<%= description[lang] %>">
+    <meta name="yandex-verification" content="6a7002655aa04451" />
     <link rel="canonical" href="<%= url %>/<%= lang == 'en' ? '' : lang %>" />
     <link rel="alternate" href="<%= url %>" hreflang="en" />
     <link rel="alternate" href="<%= url %>/ru" hreflang="ru" />
